--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "kgrid_sdk"
-version = "1.1.0"
+version = "1.2.0"
 description = "SDK for KGrid 2.0 Knowledge objects"
 authors = ["KGrid Developers <kgrid-developers@umich.edu>"]
 readme = "README.md"
@@ -8,11 +8,15 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = { version = "^0.115.4", optional = true }
+typer = {version="^0.15.1", optional=true}
 
 [tool.poetry.extras]
 api = ["fastapi"]
-
+cli=["typer"]
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+kgrid-sdk="kgrid_sdk.cli:cli"
