--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "kgrid_sdk"
-version = "1.2.0"
+version = "1.3.0"
 description = "SDK for KGrid 2.0 Knowledge objects"
 authors = ["KGrid Developers <kgrid-developers@umich.edu>"]
 readme = "README.md"
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10"
 fastapi = { version = "^0.115.4", optional = true }
 typer = {version="^0.15.1", optional=true}
+pyld = "^2.0.4"
+jinja2 = "^3.1.5"
 
 [tool.poetry.extras]
 api = ["fastapi"]
