--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
 name = "kgrid_sdk"
-version = "1.3.0"
+version = "1.4.0"
 description = "SDK for KGrid 2.0 Knowledge objects"
 authors = ["KGrid Developers <kgrid-developers@umich.edu>"]
 readme = "README.md"
+
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -21,4 +22,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-kgrid-sdk="kgrid_sdk.cli:cli"
+kgrid="kgrid_sdk.cli:cli"
